--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,68 +4,70 @@
     <string name="title_band">Band</string>
     <string name="title_profile">Profile</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="no">No</string>
-    <string name="yes">Yes</string>
-    <string name="email_not_valid">Email not valid</string>
-    <string name="password_not_valid">Password not valid</string>
-    <string name="name_cannot_empty">Name cannot be empty</string>
-    <string name="password_not_same">Retyped password not matched</string>
-    <string name="gender">Gender</string>
-    <string name="success_change_profile">Profile changed successfully</string>
-    <string name="logout_failed">Logout failed</string>
-    <string name="connecting">Connecting</string>
-    <string name="step">Step</string>
-    <string name="step_title">Today\'s step</string>
-    <string name="change_password">Change password</string>
-    <string name="change_profile">Change profile</string>
-    <string name="have_no_account">Dont\'t have an account yet?</string>
-    <string name="register">Register</string>
-    <string name="already_have_account">Already have an account?</string>
-    <string name="login">Login</string>
-    <string name="connect_device">Connect device</string>
-    <string name="app_tittle">Monitoring App</string>
-    <string name="heart_rate">Average heart rate</string>
+    <string name="no">Tidak</string>
+    <string name="yes">Ya</string>
+    <string name="email_not_valid">Email tidak valid</string>
+    <string name="password_not_valid">Password tidak valid</string>
+    <string name="name_cannot_empty">Nama tidak boleh kosong</string>
+    <string name="password_not_same">Password yang dimasukkan tidak sama</string>
+    <string name="gender">Jenis Kelamin</string>
+    <string name="success_change_profile">Berhasil mengubah profil</string>
+    <string name="logout_failed">Logout Gagal</string>
+    <string name="connecting">Menghubungkan</string>
+    <string name="step">Langkah</string>
+    <string name="step_title">Langkah hari ini</string>
+    <string name="change_password">Ubah password</string>
+    <string name="change_profile">Ubah profil</string>
+    <string name="have_no_account">Belum memiliki akun?</string>
+    <string name="register">Daftar</string>
+    <string name="already_have_account">Sudah memiliki akun?</string>
+    <string name="login">Masuk</string>
+    <string name="connect_device">Hubungkan perangkat</string>
+    <string name="app_tittle">Aplikasi Monitoring</string>
+    <string name="heart_rate">Detak jantung</string>
     <string name="bpm">BPM</string>
-    <string name="background_monitoring">Background monitoring</string>
-    <string name="live_monitoring">Live monitoring</string>
-    <string name="monitoring_period">Monitoring period</string>
-    <string name="heart_rate_limit">Heart rate limit</string>
-    <string name="old_password">Old password</string>
-    <string name="new_password">New password</string>
-    <string name="retype_password">Retype new password</string>
-    <string name="save">Save</string>
+    <string name="background_monitoring">Monitoring latar belakang</string>
+    <string name="live_monitoring">Monitoring langsung</string>
+    <string name="monitoring_period">Periode monitoring</string>
+    <string name="heart_rate_limit">Batas detak jantung</string>
+    <string name="old_password">Password lama</string>
+    <string name="new_password">Password baru</string>
+    <string name="retype_password">Masukkan ulang password baru</string>
+    <string name="save">Simpan</string>
     <string name="email">Email</string>
-    <string name="name">Name</string>
-    <string name="date_of_birth">Date of birth</string>
-    <string name="loading">Loading</string>
+    <string name="name">Nama</string>
+    <string name="date_of_birth">Tanggal lahir</string>
+    <string name="loading">Memuat</string>
     <string name="password">Password</string>
-    <string name="band_not_detected">Connected smartband not detected</string>
-    <string name="connect">Connect</string>
-    <string name="logout">Logout</string>
-    <string name="detected_devices">Detected devices</string>
-    <string name="search">Search</string>
-    <string name="stop">Stop</string>
-    <string name="live_monitoring_title">Live monitoring</string>
-    <string name="power_dialog">In order to be able to perform background monitoring the app requires you to disable power optimization. Disable power optimization?</string>
-    <string name="send">Send</string>
-    <string name="submit">Submit</string>
+    <string name="band_not_detected">Tidak terdeteksi smartband yang terhubung</string>
+    <string name="connect">Hubungkan</string>
+    <string name="logout">Keluar</string>
+    <string name="detected_devices">Perangkat Tersedia</string>
+    <string name="search">Cari</string>
+    <string name="stop">Berhenti</string>
+    <string name="live_monitoring_title">Monitoring langsung</string>
+    <string name="power_dialog">Agar dapat melakukan monitoring latar belakang aplikasi membutuhkan anda untuk menonaktifkan pengoptimalan daya. Nonaktifkan pengoptimalan daya?</string>
+    <string name="send">Kirim</string>
+    <string name="submit">Kirim</string>
     <string name="anomaly_detected">Terdeteksi anomali pada detak jantung anda</string>
-    <string name="doing_activities_question">Did you do any of the activities bellow?</string>
-    <string name="select_activities">Select activities you do</string>
-    <string name="enter_label">Enter label</string>
-    <string name="add_label_question">Do you want to add label to this activity?</string>
-    <string name="make_movement_question">Do you make movement?</string>
+    <string name="doing_activities_question">Apakah anda melakukan salah satu dari aktivitas di bawah ini?</string>
+    <string name="select_activities">Pilih semua aktivitas yang anda lakukan</string>
+    <string name="enter_label">Masukan label</string>
+    <string name="add_label_question">Apakah anda ingin menambahkan label pada aktivitas ini?</string>
+    <string name="make_movement_question">Apakah anda bergerak?</string>
+    <string name="today_average_heart_rate">Rata - rata hari ini: %1$s BPM</string>
+    <string name="today_step">Total langkah hari ini:</string>
 
     <string-array name="periods">
-        <item>1 minute</item>
-        <item>5 minutes</item>
-        <item>10 minutes</item>
-        <item>15 minutes</item>
+        <item>1 menit</item>
+        <item>5 menit</item>
+        <item>10 menit</item>
+        <item>15 menit</item>
     </string-array>
 
     <string-array name="genders">
-        <item>Male</item>
-        <item>Female</item>
+        <item>Pria</item>
+        <item>Wanita</item>
     </string-array>
 
 </resources>
